# AISubtitleTranslator

./: .gitignore  LICENSE  README.md  README_EN.md  SRT_Splitter.py  api-server.spec  api_server.py  build.bat  glossary.example.txt  pyproject.toml  release-build.bat  release-push.bat  thumbnail.py  translator.py
src/srt_translator/: __init__.py  __main__.py  cli.py  config.py  glossary.py  llm_client.py  merger.py  models.py  parser.py  pipeline.py  progress.py  quality_checker.py  text_utils.py  translator.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_glossary.py  test_llm_client.py  test_merger.py  test_models.py  test_parser.py  test_pipeline.py  test_progress.py  test_quality_checker.py  test_text_utils.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src-tauri/: 2  Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/src/components/: PromptModal.tsx  SettingsPanel.tsx  TranslationView.tsx
ui/src/hooks/: useSettings.ts
